--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <img src="images/logo.png" alt="Astral Forge Logo" width="150">
   <header>
     <h1>Astral Forge</h1>
     <nav>
@@ -40,3 +41,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
