--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <img src="images/logo.png" alt="Astral Forge Logo" width="150">
+  <img src="images/Astral Forge Logo.png" alt="Astral Forge Logo" width="150">
   <header>
     <h1>Astral Forge</h1>
     <nav>
@@ -42,5 +42,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
